[tool.poetry]
name = "gl"
version = "0.1.0"
description = ""
authors = ["MingxuanGame <MingxuanGame@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
