[tool.poetry]
name = "gl"
version = "0.1.0"
description = ""
authors = ["MingxuanGame <MingxuanGame@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
httpx = "^0.23.0"
fastapi = "^0.78.0"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 79
target-version = ["py37", "py38", "py39", "py310"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 79
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
